--- a/benches.html
+++ b/benches.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030193347">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,9 +25,10 @@
 					</a>
 					<nav data-da=".menu__burger, 1160" class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="" data-goto-header data-goto=".aboutUs" class="menu__link">О нас</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".aboutUs" class="menu__link">О
+									нас</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
 								<ul class="menu__sub-list">
 									<li class="menu__sub-item">
 										<a href="./rocking-courusels.html" class="menu__sub-link">Качалки</a>
@@ -71,13 +72,13 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".page__projects" class="menu__link">Наши
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".page__projects" class="menu__link">Наши
 									работы</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".request" class="menu__link">Оставить
-									заявку</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
+									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
@@ -132,7 +133,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">22 900</div>
+									<div class="item-product__price">Цена: 22 650₽</div>
 
 								</div>
 
@@ -156,7 +157,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">22 900</div>
+									<div class="item-product__price">Цена: 22 650₽</div>
 
 								</div>
 
@@ -181,7 +182,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">23 900</div>
+									<div class="item-product__price">Цена: 23 650₽</div>
 
 								</div>
 
@@ -207,7 +208,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">23 900</div>
+									<div class="item-product__price">Цена: 23 650₽</div>
 
 								</div>
 
@@ -232,7 +233,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">23 900</div>
+									<div class="item-product__price">Цена: 23 650₽</div>
 
 								</div>
 
@@ -258,7 +259,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">23 900</div>
+									<div class="item-product__price">Цена: 23 650₽</div>
 
 								</div>
 
@@ -284,7 +285,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">23 900</div>
+									<div class="item-product__price">Цена: 23 650₽</div>
 
 								</div>
 
@@ -312,7 +313,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">23 900</div>
+									<div class="item-product__price">Цена: 23 650₽</div>
 
 								</div>
 
@@ -340,7 +341,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">23 900</div>
+									<div class="item-product__price">Цена: 23 650₽</div>
 
 								</div>
 
@@ -367,7 +368,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">23 900</div>
+									<div class="item-product__price">Цена: 23 650₽</div>
 
 								</div>
 
@@ -391,7 +392,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">23 900</div>
+									<div class="item-product__price">Цена: 23 650₽</div>
 
 								</div>
 
@@ -417,7 +418,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">24 900</div>
+									<div class="item-product__price">Цена: 24 650₽</div>
 
 								</div>
 
@@ -442,7 +443,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">24 900</div>
+									<div class="item-product__price">Цена: 24 650₽</div>
 
 								</div>
 
@@ -469,7 +470,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">122 200</div>
+									<div class="item-product__price">Цена: 121 950₽</div>
 
 								</div>
 
@@ -494,7 +495,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">39 000</div>
+									<div class="item-product__price">Цена: 38 750₽</div>
 
 								</div>
 
@@ -520,7 +521,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">5900</div>
+									<div class="item-product__price">Цена: 5 650₽</div>
 
 								</div>
 
@@ -544,7 +545,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">7500</div>
+									<div class="item-product__price">Цена: 7 250₽</div>
 
 								</div>
 
@@ -569,7 +570,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">8800</div>
+									<div class="item-product__price">Цена: 8 550₽</div>
 
 								</div>
 
@@ -593,7 +594,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">69 100</div>
+									<div class="item-product__price">Цена: 68 850₽</div>
 
 								</div>
 
@@ -617,7 +618,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">52 500</div>
+									<div class="item-product__price">Цена: 52 250₽</div>
 
 								</div>
 
@@ -635,7 +636,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">43 200</div>
+									<div class="item-product__price">Цена: 42 950₽</div>
 
 								</div>
 
@@ -655,7 +656,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">32 200</div>
+									<div class="item-product__price">Цена: 31 950₽</div>
 
 								</div>
 
@@ -675,7 +676,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">48 100</div>
+									<div class="item-product__price">Цена: 47 850₽</div>
 
 								</div>
 
@@ -693,7 +694,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">38 200</div>
+									<div class="item-product__price">Цена: 37 950₽</div>
 
 								</div>
 
@@ -713,7 +714,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">27 300</div>
+									<div class="item-product__price">Цена: 27 050₽</div>
 
 								</div>
 
@@ -733,7 +734,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">29 500</div>
+									<div class="item-product__price">Цена: 29 250₽</div>
 
 								</div>
 
@@ -753,7 +754,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">26 200</div>
+									<div class="item-product__price">Цена: 27 950₽</div>
 
 								</div>
 
@@ -771,7 +772,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">127 200</div>
+									<div class="item-product__price">Цена: 126 950₽</div>
 
 								</div>
 
@@ -791,7 +792,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">26 500</div>
+									<div class="item-product__price">Цена: 26 250₽</div>
 
 								</div>
 
@@ -831,7 +832,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030162509"></script>
+	<script src="js/app.min.js?_v=20221030193347"></script>
 </body>
 
 </html>
