--- a/cars.html
+++ b/cars.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030193347">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,9 +25,10 @@
 					</a>
 					<nav data-da=".menu__burger, 1160" class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="" data-goto-header data-goto=".aboutUs" class="menu__link">О нас</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".aboutUs" class="menu__link">О
+									нас</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
 								<ul class="menu__sub-list">
 									<li class="menu__sub-item">
 										<a href="./rocking-courusels.html" class="menu__sub-link">Качалки</a>
@@ -71,13 +72,13 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".page__projects" class="menu__link">Наши
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".page__projects" class="menu__link">Наши
 									работы</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".request" class="menu__link">Оставить
-									заявку</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
+									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
@@ -130,7 +131,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">41 200</div>
+									<div class="item-product__price">Цена: 40 950₽</div>
 
 								</div>
 
@@ -152,7 +153,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">53 500</div>
+									<div class="item-product__price">Цена: 53 250₽</div>
 
 								</div>
 
@@ -175,7 +176,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">67 500</div>
+									<div class="item-product__price">Цена: 67 250₽</div>
 
 								</div>
 
@@ -199,7 +200,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">79 500</div>
+									<div class="item-product__price">Цена: 79 250₽</div>
 
 								</div>
 
@@ -222,7 +223,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">145 500</div>
+									<div class="item-product__price">Цена: 145 250₽</div>
 
 								</div>
 
@@ -247,7 +248,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">115 500</div>
+									<div class="item-product__price">Цена: 115 250₽</div>
 
 								</div>
 
@@ -271,7 +272,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">90 500</div>
+									<div class="item-product__price">Цена: 90 250₽</div>
 
 								</div>
 
@@ -297,7 +298,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">145 500</div>
+									<div class="item-product__price">Цена: 145 250₽</div>
 
 								</div>
 
@@ -323,7 +324,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">75 500</div>
+									<div class="item-product__price">Цена: 75 250₽</div>
 
 								</div>
 
@@ -348,7 +349,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">72 500</div>
+									<div class="item-product__price">Цена: 72 250₽</div>
 
 								</div>
 
@@ -372,7 +373,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">79 500</div>
+									<div class="item-product__price">Цена: 79 250₽</div>
 
 								</div>
 
@@ -396,7 +397,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">69 200</div>
+									<div class="item-product__price">Цена: 68 950₽</div>
 
 								</div>
 
@@ -420,7 +421,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">59 500</div>
+									<div class="item-product__price">Цена: 59 250₽</div>
 
 								</div>
 
@@ -445,7 +446,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">72 500</div>
+									<div class="item-product__price">Цена: 72 250₽</div>
 
 								</div>
 
@@ -468,7 +469,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">49 900</div>
+									<div class="item-product__price">Цена: 49 650₽</div>
 
 								</div>
 
@@ -492,7 +493,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">68 500</div>
+									<div class="item-product__price">Цена: 68 250₽</div>
 
 								</div>
 
@@ -513,7 +514,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">87 200</div>
+									<div class="item-product__price">Цена: 86 950₽</div>
 
 								</div>
 
@@ -536,7 +537,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">35 200</div>
+									<div class="item-product__price">Цена: 34 950₽</div>
 
 								</div>
 
@@ -580,7 +581,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030162509"></script>
+	<script src="js/app.min.js?_v=20221030193347"></script>
 </body>
 
 </html>
