--- a/houses.html
+++ b/houses.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030193347">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,9 +25,10 @@
 					</a>
 					<nav data-da=".menu__burger, 1160" class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="" data-goto-header data-goto=".aboutUs" class="menu__link">О нас</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".aboutUs" class="menu__link">О
+									нас</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
 								<ul class="menu__sub-list">
 									<li class="menu__sub-item">
 										<a href="./rocking-courusels.html" class="menu__sub-link">Качалки</a>
@@ -71,13 +72,13 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".page__projects" class="menu__link">Наши
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".page__projects" class="menu__link">Наши
 									работы</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".request" class="menu__link">Оставить
-									заявку</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
+									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
@@ -128,7 +129,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">6200</div>
+									<div class="item-product__price">Цена: 5 950₽</div>
 
 								</div>
 
@@ -148,7 +149,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">6200</div>
+									<div class="item-product__price">Цена: 5 950₽</div>
 
 								</div>
 
@@ -169,7 +170,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">6200</div>
+									<div class="item-product__price">Цена: 5 950₽</div>
 
 								</div>
 
@@ -191,7 +192,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">6 500</div>
+									<div class="item-product__price">Цена: 6 250₽</div>
 
 								</div>
 
@@ -212,7 +213,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">45 500</div>
+									<div class="item-product__price">Цена: 45 250₽</div>
 
 								</div>
 
@@ -236,7 +237,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">40 200</div>
+									<div class="item-product__price">Цена: 39 950₽</div>
 
 								</div>
 
@@ -259,7 +260,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">42 000</div>
+									<div class="item-product__price">Цена: 41 750₽</div>
 
 								</div>
 
@@ -284,7 +285,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">43 350</div>
+									<div class="item-product__price">Цена: 43 100₽</div>
 
 								</div>
 
@@ -309,7 +310,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">42 500</div>
+									<div class="item-product__price">Цена: 42 250₽</div>
 
 								</div>
 
@@ -333,7 +334,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">62 500</div>
+									<div class="item-product__price">Цена: 62 250₽</div>
 
 								</div>
 
@@ -356,7 +357,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">47 200</div>
+									<div class="item-product__price">Цена: 45 950₽</div>
 
 								</div>
 
@@ -379,7 +380,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">39 200</div>
+									<div class="item-product__price">Цена: 38 950₽</div>
 
 								</div>
 
@@ -402,7 +403,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">97 500</div>
+									<div class="item-product__price">Цена: 97 250₽</div>
 
 								</div>
 
@@ -426,7 +427,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">49 200</div>
+									<div class="item-product__price">Цена: 37 950₽</div>
 
 								</div>
 
@@ -448,7 +449,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">44 200</div>
+									<div class="item-product__price">Цена: 43 950₽</div>
 
 								</div>
 
@@ -471,7 +472,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">46 200</div>
+									<div class="item-product__price">Цена: 45 950</div>
 
 								</div>
 
@@ -493,7 +494,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">46 200</div>
+									<div class="item-product__price">Цена: 45 700₽</div>
 
 								</div>
 
@@ -517,7 +518,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">38 200</div>
+									<div class="item-product__price">Цена: 47 700₽</div>
 
 								</div>
 
@@ -541,7 +542,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">62 500</div>
+									<div class="item-product__price">Цена: 62 250₽</div>
 
 								</div>
 
@@ -564,7 +565,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">68 500</div>
+									<div class="item-product__price">Цена: 68 250₽</div>
 
 								</div>
 
@@ -587,7 +588,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">147 900</div>
+									<div class="item-product__price">Цена: 147 650₽</div>
 
 								</div>
 
@@ -610,7 +611,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">116 500
+									<div class="item-product__price">Цена: 116 250₽
 									</div>
 
 								</div>
@@ -634,7 +635,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">42000</div>
+									<div class="item-product__price">Цена: 41 950₽</div>
 
 								</div>
 
@@ -657,7 +658,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">39 900</div>
+									<div class="item-product__price">Цена: 39 650₽</div>
 
 								</div>
 
@@ -680,7 +681,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">32 300</div>
+									<div class="item-product__price">Цена: 32 050₽</div>
 
 								</div>
 
@@ -703,7 +704,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">38 200</div>
+									<div class="item-product__price">Цена: 37 950₽</div>
 
 								</div>
 
@@ -726,7 +727,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">32000</div>
+									<div class="item-product__price">Цена: 31 950₽</div>
 
 								</div>
 
@@ -769,7 +770,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030162509"></script>
+	<script src="js/app.min.js?_v=20221030193347"></script>
 </body>
 
 </html>
