--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030193347">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,9 +25,10 @@
 					</a>
 					<nav data-da=".menu__burger, 1160" class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="" data-goto-header data-goto=".aboutUs" class="menu__link">О нас</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".aboutUs" class="menu__link">О
+									нас</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
 								<ul class="menu__sub-list">
 									<li class="menu__sub-item">
 										<a href="./rocking-courusels.html" class="menu__sub-link">Качалки</a>
@@ -71,13 +72,13 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".page__projects" class="menu__link">Наши
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".page__projects" class="menu__link">Наши
 									работы</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".request" class="menu__link">Оставить
-									заявку</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
+									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
@@ -583,7 +584,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030162509"></script>
+	<script src="js/app.min.js?_v=20221030193347"></script>
 </body>
 
 </html>
