--- a/other.html
+++ b/other.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030193347">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,9 +25,10 @@
 					</a>
 					<nav data-da=".menu__burger, 1160" class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="" data-goto-header data-goto=".aboutUs" class="menu__link">О нас</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".aboutUs" class="menu__link">О
+									нас</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
 								<ul class="menu__sub-list">
 									<li class="menu__sub-item">
 										<a href="./rocking-courusels.html" class="menu__sub-link">Качалки</a>
@@ -71,13 +72,13 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".page__projects" class="menu__link">Наши
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".page__projects" class="menu__link">Наши
 									работы</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".request" class="menu__link">Оставить
-									заявку</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
+									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
@@ -131,7 +132,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -154,7 +155,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -178,7 +179,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -203,7 +204,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -226,7 +227,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -251,7 +252,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -276,7 +277,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -303,7 +304,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -330,7 +331,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -356,7 +357,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -380,7 +381,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -407,7 +408,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -431,7 +432,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -457,7 +458,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -483,7 +484,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -508,7 +509,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -531,7 +532,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -555,7 +556,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -578,7 +579,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">договорная</div>
+									<div class="item-product__price">Цена: договорная</div>
 
 								</div>
 
@@ -601,7 +602,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">9 700</div>
+									<div class="item-product__price">Цена: 9 450₽</div>
 
 								</div>
 
@@ -619,7 +620,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">5 850</div>
+									<div class="item-product__price">Цена: 5 600₽</div>
 
 								</div>
 
@@ -638,7 +639,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">9 900</div>
+									<div class="item-product__price">Цена: 9 650₽</div>
 
 								</div>
 
@@ -657,7 +658,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">12 800</div>
+									<div class="item-product__price">Цена: 12 550₽</div>
 
 								</div>
 
@@ -675,7 +676,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">6 800</div>
+									<div class="item-product__price">Цена: 6 550₽</div>
 
 								</div>
 
@@ -694,7 +695,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">12 700</div>
+									<div class="item-product__price">Цена: 12 450₽</div>
 
 								</div>
 
@@ -713,7 +714,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">5 800</div>
+									<div class="item-product__price">Цена: 5 550₽</div>
 
 								</div>
 
@@ -732,7 +733,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">5 500</div>
+									<div class="item-product__price">Цена: 5 250₽</div>
 
 								</div>
 
@@ -751,7 +752,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">5 300</div>
+									<div class="item-product__price">Цена: 5 050₽</div>
 
 								</div>
 
@@ -794,7 +795,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030162509"></script>
+	<script src="js/app.min.js?_v=20221030193347"></script>
 </body>
 
 </html>
