--- a/sandbox.html
+++ b/sandbox.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030193347">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,9 +25,10 @@
 					</a>
 					<nav data-da=".menu__burger, 1160" class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="" data-goto-header data-goto=".aboutUs" class="menu__link">О нас</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".aboutUs" class="menu__link">О
+									нас</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
 								<ul class="menu__sub-list">
 									<li class="menu__sub-item">
 										<a href="./rocking-courusels.html" class="menu__sub-link">Качалки</a>
@@ -71,13 +72,13 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".page__projects" class="menu__link">Наши
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".page__projects" class="menu__link">Наши
 									работы</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".request" class="menu__link">Оставить
-									заявку</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
+									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
@@ -129,7 +130,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">26 500</div>
+									<div class="item-product__price">Цена: 26 250₽</div>
 
 								</div>
 
@@ -150,7 +151,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">25 200</div>
+									<div class="item-product__price">Цена: 24 950₽</div>
 
 								</div>
 
@@ -172,7 +173,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">29 200</div>
+									<div class="item-product__price">Цена: 28 950₽</div>
 
 								</div>
 
@@ -195,7 +196,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">18 500</div>
+									<div class="item-product__price">Цена: 18 250₽</div>
 
 								</div>
 
@@ -217,7 +218,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">18 500</div>
+									<div class="item-product__price">Цена: 18 250₽</div>
 
 								</div>
 
@@ -240,7 +241,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">39 200</div>
+									<div class="item-product__price">Цена: 38 950₽</div>
 
 								</div>
 
@@ -262,7 +263,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">39 500</div>
+									<div class="item-product__price">Цена: 39 250₽</div>
 
 								</div>
 
@@ -286,7 +287,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">37 500</div>
+									<div class="item-product__price">Цена: 37 250₽</div>
 
 								</div>
 
@@ -310,7 +311,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">42 500</div>
+									<div class="item-product__price">Цена: 42 250₽</div>
 
 								</div>
 
@@ -333,7 +334,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">49 200</div>
+									<div class="item-product__price">Цена: 48 950₽</div>
 
 								</div>
 
@@ -355,7 +356,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">76 500</div>
+									<div class="item-product__price">Цена: 76 250₽</div>
 
 								</div>
 
@@ -377,7 +378,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">79 500</div>
+									<div class="item-product__price">Цена: 79 250₽</div>
 
 								</div>
 
@@ -399,7 +400,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">132 500</div>
+									<div class="item-product__price">Цена: 132 250₽</div>
 
 								</div>
 
@@ -422,7 +423,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">41 500</div>
+									<div class="item-product__price">Цена: 41 250₽</div>
 
 								</div>
 
@@ -442,7 +443,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">160000</div>
+									<div class="item-product__price">Цена: 159 750₽</div>
 
 								</div>
 
@@ -464,7 +465,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">31 200</div>
+									<div class="item-product__price">Цена: 30 950₽</div>
 
 								</div>
 
@@ -484,7 +485,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">29 200</div>
+									<div class="item-product__price">Цена: 28 950₽</div>
 
 								</div>
 
@@ -507,7 +508,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">38 900</div>
+									<div class="item-product__price">Цена: 38 650₽</div>
 
 								</div>
 
@@ -530,7 +531,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">29 100</div>
+									<div class="item-product__price">Цена: 28 850₽</div>
 
 								</div>
 
@@ -551,7 +552,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">170500</div>
+									<div class="item-product__price">Цена: 170 250₽</div>
 
 								</div>
 
@@ -594,7 +595,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030162509"></script>
+	<script src="js/app.min.js?_v=20221030193347"></script>
 </body>
 
 </html>
