--- a/sport-equip.html
+++ b/sport-equip.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030193347">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,9 +25,10 @@
 					</a>
 					<nav data-da=".menu__burger, 1160" class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="" data-goto-header data-goto=".aboutUs" class="menu__link">О нас</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".aboutUs" class="menu__link">О
+									нас</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
 								<ul class="menu__sub-list">
 									<li class="menu__sub-item">
 										<a href="./rocking-courusels.html" class="menu__sub-link">Качалки</a>
@@ -71,13 +72,13 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".page__projects" class="menu__link">Наши
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".page__projects" class="menu__link">Наши
 									работы</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".request" class="menu__link">Оставить
-									заявку</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
+									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
@@ -129,7 +130,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">22200</div>
+									<div class="item-product__price">Цена: 21 950₽</div>
 
 								</div>
 
@@ -150,7 +151,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">25 200</div>
+									<div class="item-product__price">Цена: 26 950₽</div>
 
 								</div>
 
@@ -169,7 +170,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">15 200</div>
+									<div class="item-product__price">Цена: 14 950₽</div>
 
 								</div>
 
@@ -190,7 +191,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">28 100</div>
+									<div class="item-product__price">Цена: 27 850₽</div>
 
 								</div>
 
@@ -211,7 +212,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">17 800</div>
+									<div class="item-product__price">Цена: 17 550₽</div>
 
 								</div>
 
@@ -230,7 +231,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">28 800</div>
+									<div class="item-product__price">Цена: 28 550₽</div>
 
 								</div>
 
@@ -251,7 +252,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">56 200</div>
+									<div class="item-product__price">Цена: 55 950₽</div>
 
 								</div>
 
@@ -272,7 +273,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">27 990</div>
+									<div class="item-product__price">Цена: 27 740₽</div>
 
 								</div>
 
@@ -293,7 +294,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">24 990</div>
+									<div class="item-product__price">Цена: 24 740₽</div>
 
 								</div>
 
@@ -314,7 +315,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">32 400</div>
+									<div class="item-product__price">Цена: 32 150₽</div>
 
 								</div>
 
@@ -334,7 +335,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">39 200</div>
+									<div class="item-product__price">Цена: 38 950₽</div>
 
 								</div>
 
@@ -355,7 +356,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">26 900</div>
+									<div class="item-product__price">Цена: 26 650₽</div>
 
 								</div>
 
@@ -376,7 +377,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">21 900</div>
+									<div class="item-product__price">Цена: 21 650₽</div>
 
 								</div>
 
@@ -397,7 +398,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">27 900</div>
+									<div class="item-product__price">Цена: 27 650₽</div>
 
 								</div>
 
@@ -418,7 +419,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">27 200</div>
+									<div class="item-product__price">Цена: 26 950₽</div>
 
 								</div>
 
@@ -439,7 +440,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">23 990</div>
+									<div class="item-product__price">Цена: 23 740₽</div>
 
 								</div>
 
@@ -460,7 +461,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">23 550</div>
+									<div class="item-product__price">Цена: 23 300₽</div>
 
 								</div>
 
@@ -481,7 +482,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">28 800</div>
+									<div class="item-product__price">Цена: 28 550₽</div>
 
 								</div>
 
@@ -502,7 +503,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">24 100</div>
+									<div class="item-product__price">Цена: 23 850₽</div>
 
 								</div>
 
@@ -523,7 +524,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">25 500</div>
+									<div class="item-product__price">Цена: 25 250₽</div>
 
 								</div>
 
@@ -544,7 +545,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">20 500</div>
+									<div class="item-product__price">Цена: 20 250₽</div>
 
 								</div>
 
@@ -566,7 +567,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">27 300</div>
+									<div class="item-product__price">Цена: 27 050₽</div>
 
 								</div>
 
@@ -588,7 +589,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">29600</div>
+									<div class="item-product__price">Цена: 29 350₽</div>
 
 								</div>
 
@@ -611,7 +612,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">28 000</div>
+									<div class="item-product__price">Цена: 27 750₽</div>
 
 								</div>
 
@@ -633,7 +634,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">27900</div>
+									<div class="item-product__price">Цена: 27 650₽</div>
 
 								</div>
 
@@ -655,7 +656,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">46900</div>
+									<div class="item-product__price">Цена: 46 650₽</div>
 
 								</div>
 
@@ -677,7 +678,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">36000</div>
+									<div class="item-product__price">Цена: 35 750₽</div>
 
 								</div>
 
@@ -699,7 +700,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">29200</div>
+									<div class="item-product__price">Цена: 28 950₽</div>
 
 								</div>
 
@@ -722,7 +723,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">31500</div>
+									<div class="item-product__price">Цена: 31 250₽</div>
 
 								</div>
 
@@ -744,7 +745,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">44200</div>
+									<div class="item-product__price">Цена: 43 950₽</div>
 
 								</div>
 
@@ -766,7 +767,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">27500</div>
+									<div class="item-product__price">Цена: 27 250₽</div>
 
 								</div>
 
@@ -788,7 +789,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">25 900</div>
+									<div class="item-product__price">Цена: 25 650₽</div>
 
 								</div>
 
@@ -810,7 +811,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">26900</div>
+									<div class="item-product__price">Цена: 26 650₽</div>
 
 								</div>
 
@@ -832,7 +833,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">23100</div>
+									<div class="item-product__price">Цена: 22 850₽</div>
 
 								</div>
 
@@ -874,7 +875,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030162509"></script>
+	<script src="js/app.min.js?_v=20221030193347"></script>
 </body>
 
 </html>
