--- a/gaming-complexes.html
+++ b/gaming-complexes.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030193347">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,9 +25,10 @@
 					</a>
 					<nav data-da=".menu__burger, 1160" class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="" data-goto-header data-goto=".aboutUs" class="menu__link">О нас</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".aboutUs" class="menu__link">О
+									нас</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
 								<ul class="menu__sub-list">
 									<li class="menu__sub-item">
 										<a href="./rocking-courusels.html" class="menu__sub-link">Качалки</a>
@@ -71,13 +72,13 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".page__projects" class="menu__link">Наши
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".page__projects" class="menu__link">Наши
 									работы</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".request" class="menu__link">Оставить
-									заявку</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
+									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
@@ -133,7 +134,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">91 200</div>
+									<div class="item-product__price">Цена: 90 950₽</div>
 
 								</div>
 
@@ -156,7 +157,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">72 200</div>
+									<div class="item-product__price">Цена: 71 950₽</div>
 
 								</div>
 
@@ -180,7 +181,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">85 500</div>
+									<div class="item-product__price">Цена: 85 250₽</div>
 
 								</div>
 
@@ -205,7 +206,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">85 500</div>
+									<div class="item-product__price">Цена: 85 250₽</div>
 
 								</div>
 
@@ -229,7 +230,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">139 500</div>
+									<div class="item-product__price">Цена: 139 250₽</div>
 
 								</div>
 
@@ -255,7 +256,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">195 500</div>
+									<div class="item-product__price">Цена: 195 250₽</div>
 
 								</div>
 
@@ -280,7 +281,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">110 900</div>
+									<div class="item-product__price">Цена: 110 650₽</div>
 
 								</div>
 
@@ -307,7 +308,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">79 500</div>
+									<div class="item-product__price">Цена: 79 250₽</div>
 
 								</div>
 
@@ -334,7 +335,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">85 500</div>
+									<div class="item-product__price">Цена: 85 250₽</div>
 
 								</div>
 
@@ -360,7 +361,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">104 900</div>
+									<div class="item-product__price">Цена: 104 650₽</div>
 
 								</div>
 
@@ -385,7 +386,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">99 900</div>
+									<div class="item-product__price">Цена: 99 650₽</div>
 
 								</div>
 
@@ -410,7 +411,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">144 900</div>
+									<div class="item-product__price">Цена: 144 650₽</div>
 
 								</div>
 
@@ -435,7 +436,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">185 900</div>
+									<div class="item-product__price">Цена: 185 650₽</div>
 
 								</div>
 
@@ -461,7 +462,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">277 300</div>
+									<div class="item-product__price">Цена: 277 050₽</div>
 
 								</div>
 
@@ -485,7 +486,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">195 990</div>
+									<div class="item-product__price">Цена: 195 740₽</div>
 
 								</div>
 
@@ -510,7 +511,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">69 900</div>
+									<div class="item-product__price">Цена: 69 650₽</div>
 
 								</div>
 
@@ -533,7 +534,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">89 900</div>
+									<div class="item-product__price">Цена: 89 650₽</div>
 
 								</div>
 
@@ -557,7 +558,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">98 550</div>
+									<div class="item-product__price">Цена: 98 300₽</div>
 
 								</div>
 
@@ -580,7 +581,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">93 200</div>
+									<div class="item-product__price">Цена: 92 950₽</div>
 
 								</div>
 
@@ -603,7 +604,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">141 990</div>
+									<div class="item-product__price">Цена: 141 740₽</div>
 
 								</div>
 
@@ -626,7 +627,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">250 500</div>
+									<div class="item-product__price">Цена: 250 250₽</div>
 
 								</div>
 
@@ -651,7 +652,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">295 200</div>
+									<div class="item-product__price">Цена: 294 950₽</div>
 
 								</div>
 
@@ -675,7 +676,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">166 500</div>
+									<div class="item-product__price">Цена: 166 250₽</div>
 
 								</div>
 
@@ -701,7 +702,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">192 500</div>
+									<div class="item-product__price">Цена: 192 250₽</div>
 
 								</div>
 
@@ -726,7 +727,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">265 200</div>
+									<div class="item-product__price">Цена: 264 950₽</div>
 
 								</div>
 
@@ -753,7 +754,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">370 800</div>
+									<div class="item-product__price">Цена: 370 550₽</div>
 
 								</div>
 
@@ -780,7 +781,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">145 700</div>
+									<div class="item-product__price">Цена: 145 450₽</div>
 
 								</div>
 
@@ -806,7 +807,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">249 500</div>
+									<div class="item-product__price">Цена: 249 250₽</div>
 
 								</div>
 
@@ -831,7 +832,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">172 200</div>
+									<div class="item-product__price">Цена: 171 950₽</div>
 
 								</div>
 
@@ -856,7 +857,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">195 500</div>
+									<div class="item-product__price">Цена: 195 250₽</div>
 
 								</div>
 
@@ -881,7 +882,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">79 900</div>
+									<div class="item-product__price">Цена: 79 650₽</div>
 
 								</div>
 
@@ -907,7 +908,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">88 800</div>
+									<div class="item-product__price">Цена: 88 550₽</div>
 
 								</div>
 
@@ -931,7 +932,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">88 200</div>
+									<div class="item-product__price">Цена: 87 950₽</div>
 
 								</div>
 
@@ -956,7 +957,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">92 500</div>
+									<div class="item-product__price">Цена: 92 250₽</div>
 
 								</div>
 
@@ -979,7 +980,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">138 900</div>
+									<div class="item-product__price">Цена: 138 650₽</div>
 
 								</div>
 
@@ -1003,7 +1004,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">290 900</div>
+									<div class="item-product__price">Цена: 290 650₽</div>
 
 								</div>
 
@@ -1028,7 +1029,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">369 500</div>
+									<div class="item-product__price">Цена: 369 250₽</div>
 
 								</div>
 
@@ -1055,7 +1056,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">215 500</div>
+									<div class="item-product__price">Цена: 215 250₽</div>
 
 								</div>
 
@@ -1082,7 +1083,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">490 500</div>
+									<div class="item-product__price">Цена: 490 250₽</div>
 
 								</div>
 
@@ -1108,7 +1109,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">490 350</div>
+									<div class="item-product__price">Цена: 490 100₽</div>
 
 								</div>
 
@@ -1133,7 +1134,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">197 500</div>
+									<div class="item-product__price">Цена: 197 250₽</div>
 
 								</div>
 
@@ -1158,7 +1159,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">120 500</div>
+									<div class="item-product__price">Цена: 120 250₽</div>
 
 								</div>
 
@@ -1183,7 +1184,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">140 500</div>
+									<div class="item-product__price">Цена: 140 250₽</div>
 
 								</div>
 
@@ -1209,7 +1210,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">170 500</div>
+									<div class="item-product__price">Цена: 170 250₽</div>
 
 								</div>
 
@@ -1233,7 +1234,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">139 900</div>
+									<div class="item-product__price">Цена: 139 650₽</div>
 
 								</div>
 
@@ -1258,7 +1259,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">480 500</div>
+									<div class="item-product__price">Цена: 480 250₽</div>
 
 								</div>
 
@@ -1281,7 +1282,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">135 800</div>
+									<div class="item-product__price">Цена: 135 550₽</div>
 
 								</div>
 
@@ -1305,7 +1306,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">85 550</div>
+									<div class="item-product__price">Цена: 85 300₽</div>
 
 								</div>
 
@@ -1349,7 +1350,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030162509"></script>
+	<script src="js/app.min.js?_v=20221030193347"></script>
 </body>
 
 </html>
