--- a/gymnastics-complexes.html
+++ b/gymnastics-complexes.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030193347">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,9 +25,10 @@
 					</a>
 					<nav data-da=".menu__burger, 1160" class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="" data-goto-header data-goto=".aboutUs" class="menu__link">О нас</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".aboutUs" class="menu__link">О
+									нас</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
 								<ul class="menu__sub-list">
 									<li class="menu__sub-item">
 										<a href="./rocking-courusels.html" class="menu__sub-link">Качалки</a>
@@ -71,13 +72,13 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".page__projects" class="menu__link">Наши
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".page__projects" class="menu__link">Наши
 									работы</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".request" class="menu__link">Оставить
-									заявку</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
+									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
@@ -128,7 +129,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">98 900</div>
+									<div class="item-product__price">Цена: 98 650₽</div>
 
 								</div>
 
@@ -148,7 +149,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">94 900</div>
+									<div class="item-product__price">Цена: 94 650₽</div>
 
 								</div>
 
@@ -168,7 +169,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">99 500</div>
+									<div class="item-product__price">Цена: 99 250₽</div>
 
 								</div>
 
@@ -188,7 +189,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">82 500</div>
+									<div class="item-product__price">Цена: 82 250₽</div>
 
 								</div>
 
@@ -208,7 +209,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">89 500</div>
+									<div class="item-product__price">Цена: 89 250₽</div>
 
 								</div>
 
@@ -228,7 +229,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">54 900</div>
+									<div class="item-product__price">Цена: 54 650₽</div>
 
 								</div>
 
@@ -248,7 +249,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">45 500</div>
+									<div class="item-product__price">Цена: 45 250₽</div>
 
 								</div>
 
@@ -268,7 +269,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">43 990</div>
+									<div class="item-product__price">Цена: 43 740₽</div>
 
 								</div>
 
@@ -288,7 +289,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">37 500</div>
+									<div class="item-product__price">Цена: 37 250₽</div>
 
 								</div>
 
@@ -308,7 +309,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">79 500</div>
+									<div class="item-product__price">Цена: 79 250₽</div>
 
 								</div>
 
@@ -328,7 +329,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">68 900</div>
+									<div class="item-product__price">Цена: 68 650₽</div>
 
 								</div>
 
@@ -348,7 +349,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">89 800</div>
+									<div class="item-product__price">Цена: 89 550₽</div>
 
 								</div>
 
@@ -368,7 +369,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">84 990</div>
+									<div class="item-product__price">Цена: 84 740₽</div>
 
 								</div>
 
@@ -388,7 +389,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">65 500</div>
+									<div class="item-product__price">Цена: 65 250₽</div>
 
 								</div>
 
@@ -408,7 +409,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">52 500</div>
+									<div class="item-product__price">Цена: 52 250₽</div>
 
 								</div>
 
@@ -428,7 +429,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">78 500</div>
+									<div class="item-product__price">Цена: 78 250₽</div>
 
 								</div>
 
@@ -448,7 +449,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">66 200</div>
+									<div class="item-product__price">Цена: 65 950₽</div>
 
 								</div>
 
@@ -468,7 +469,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">95 500</div>
+									<div class="item-product__price">Цена: 95 250₽</div>
 
 								</div>
 
@@ -510,7 +511,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030162509"></script>
+	<script src="js/app.min.js?_v=20221030193347"></script>
 </body>
 
 </html>
