--- a/rocking-courusels.html
+++ b/rocking-courusels.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030162509">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030193347">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,9 +25,10 @@
 					</a>
 					<nav data-da=".menu__burger, 1160" class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="" data-goto-header data-goto=".aboutUs" class="menu__link">О нас</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".aboutUs" class="menu__link">О
+									нас</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
 								<ul class="menu__sub-list">
 									<li class="menu__sub-item">
 										<a href="./rocking-courusels.html" class="menu__sub-link">Качалки</a>
@@ -71,13 +72,13 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".page__projects" class="menu__link">Наши
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".page__projects" class="menu__link">Наши
 									работы</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".certificates" class="menu__link">Сертификаты</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".reviews" class="menu__link">Отзывы</a>
 							</li>
-							<li class="menu__item"><a href="" data-goto-header data-goto=".request" class="menu__link">Оставить
-									заявку</a></li>
+							<li class="menu__item"><a href="./index.html" data-goto-header data-goto=".map" class="menu__link">Мы на
+									карте</a></li>
 						</ul>
 					</nav>
 					<div class="header__contact">
@@ -125,7 +126,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">18900</div>
+									<div class="item-product__price">Цена: 18 650₽</div>
 
 								</div>
 
@@ -142,7 +143,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">24 100</div>
+									<div class="item-product__price">Цена: 23 850₽</div>
 
 								</div>
 
@@ -159,7 +160,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">24 100</div>
+									<div class="item-product__price">Цена: 23 850₽</div>
 
 								</div>
 
@@ -176,7 +177,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">36 200</div>
+									<div class="item-product__price">Цена: 35 950₽</div>
 
 								</div>
 
@@ -193,7 +194,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">32 250</div>
+									<div class="item-product__price">Цена: 32 000₽</div>
 
 								</div>
 
@@ -210,7 +211,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">45 500</div>
+									<div class="item-product__price">Цена: 45 250₽</div>
 
 								</div>
 
@@ -227,7 +228,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">37 900</div>
+									<div class="item-product__price">Цена: 37 650₽</div>
 
 								</div>
 
@@ -244,7 +245,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">19 650</div>
+									<div class="item-product__price">Цена: 19 400₽</div>
 
 								</div>
 
@@ -263,7 +264,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">19 000</div>
+									<div class="item-product__price">Цена: 18 750₽</div>
 
 								</div>
 
@@ -282,7 +283,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">19 750</div>
+									<div class="item-product__price">Цена: 19 500₽</div>
 
 								</div>
 
@@ -301,7 +302,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">19 750</div>
+									<div class="item-product__price">Цена: 19 500₽</div>
 
 								</div>
 
@@ -320,7 +321,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">35 350</div>
+									<div class="item-product__price">Цена: 35 100₽</div>
 
 								</div>
 
@@ -339,7 +340,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">19 200</div>
+									<div class="item-product__price">Цена: 18 950₽</div>
 
 								</div>
 
@@ -358,7 +359,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">19 250</div>
+									<div class="item-product__price">Цена: 19 000₽</div>
 
 								</div>
 
@@ -377,7 +378,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">35 350</div>
+									<div class="item-product__price">Цена: 35 100₽</div>
 
 								</div>
 
@@ -396,7 +397,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">35 350</div>
+									<div class="item-product__price">Цена: 35 100₽</div>
 
 								</div>
 
@@ -415,7 +416,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">19 250</div>
+									<div class="item-product__price">Цена: 19 000₽</div>
 
 								</div>
 
@@ -434,7 +435,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">19 720</div>
+									<div class="item-product__price">Цена: 19 500₽</div>
 
 								</div>
 
@@ -453,7 +454,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">19 250</div>
+									<div class="item-product__price">Цена: 19 000₽</div>
 
 								</div>
 
@@ -472,7 +473,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">26 750</div>
+									<div class="item-product__price">Цена: 26 500₽</div>
 
 								</div>
 
@@ -491,7 +492,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">20 350</div>
+									<div class="item-product__price">Цена: 20 100₽</div>
 
 								</div>
 
@@ -510,7 +511,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">23 200</div>
+									<div class="item-product__price">Цена: 22 250₽</div>
 
 								</div>
 
@@ -529,7 +530,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">39 350</div>
+									<div class="item-product__price">Цена: 39 100₽</div>
 
 								</div>
 
@@ -548,7 +549,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">35 350</div>
+									<div class="item-product__price">Цена: 35 100₽</div>
 
 								</div>
 
@@ -567,7 +568,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">35 500</div>
+									<div class="item-product__price">Цена: 35 250₽</div>
 
 								</div>
 
@@ -586,7 +587,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">34 250</div>
+									<div class="item-product__price">Цена: 34 000₽</div>
 
 								</div>
 
@@ -605,7 +606,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">19 500D</div>
+									<div class="item-product__price">Цена: 19 250₽</div>
 
 								</div>
 
@@ -624,7 +625,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">19 500</div>
+									<div class="item-product__price">Цена: 19 250₽</div>
 
 								</div>
 
@@ -643,7 +644,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">19 500</div>
+									<div class="item-product__price">Цена: 19 250₽</div>
 
 								</div>
 
@@ -662,7 +663,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">22 500</div>
+									<div class="item-product__price">Цена: 22 250₽</div>
 
 								</div>
 
@@ -681,7 +682,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">26 250</div>
+									<div class="item-product__price">Цена: 26 000₽</div>
 
 								</div>
 
@@ -699,7 +700,7 @@
 
 								</div>
 								<div class="item-product__prices">
-									<div class="item-product__price">39 500</div>
+									<div class="item-product__price">Цена: 39 250₽</div>
 
 								</div>
 
@@ -739,7 +740,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030162509"></script>
+	<script src="js/app.min.js?_v=20221030193347"></script>
 </body>
 
 </html>
