--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030193347">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221031143126">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -554,7 +554,7 @@
 				<div class="map__container">
 					<div class="map__title title">Мы на карте</div>
 				</div>
-				<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A746c4dd04cf8cb090bbfd8c358e9ae362a56da86d78edb3fdb201d21326cf3e0&amp;source=constructor" width="100%" height="457" frameborder="0"></iframe>
+				<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A746c4dd04cf8cb090bbfd8c358e9ae362a56da86d78edb3fdb201d21326cf3e0&amp;source=constructor" width="100%" height="720" frameborder="0"></iframe>
 			</section>
 		</main>
 		<footer class="footer">
@@ -569,7 +569,7 @@
 				</div>
 				<div class="footer__column">
 					<div class="footer__number footer-text">+7 (961) 30 919 30</div>
-					<div class="footer__address footer-text">г.Таганрог ул.Греческая, д.37</div>
+					<div class="footer__address footer-text">г.Таганрог ул.Чучева, д.49</div>
 					<div class="footer__mail footer-text">eco-maf@mail.com</div>
 
 				</div>
@@ -584,7 +584,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221030193347"></script>
+	<script src="js/app.min.js?_v=20221031143126"></script>
 </body>
 
 </html>
