--- a/other.html
+++ b/other.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221031143126">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221031195721">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -140,7 +140,7 @@
 						</article>
 						<article class="products__item item-product">
 
-							<a href="" class="item-product__image special-img ">
+							<a href="" class="item-product__image   ">
 								<img src="img/другое/image 248.png" alt=" ">
 							</a>
 							<div class="item-product__body">
@@ -795,7 +795,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20221031143126"></script>
+	<script src="js/app.min.js?_v=20221031195721"></script>
 </body>
 
 </html>
